--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <form method="post">
-    <label for="title">Título:</label>
-    <input type="text" name="title" required>
+    {{ form.hidden_tag() }}  <!-- Esto agrega el token CSRF -->
+    {{ form.title.label }}: {{ form.title }}
     <br>
-    <label for="content">Contenido:</label>
-    <textarea name="content" required></textarea>
+    {{ form.content.label }}: {{ form.content }}
     <br>
-    <input type="submit" value="Crear Post">
+    {{ form.submit() }}
 </form>
 {% endblock %}
