--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Acerca de</h2>
+    <h2>Acerca del Miniblog</h2>
     <p>
         Este es un miniblog creado por y para la gente de Río Cuarto con el propósito de compartir ideas en un espacio de respeto y libertad. Aquí, buscamos proporcionar noticias y opiniones sobre los acontecimientos actuales tanto en nuestra querida ciudad como en el país y el mundo.
     </p>
