--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,10 +1,7 @@
-.navbar-brand img {
-    height: 50px;
-    width: auto;
-}
-
-/* General */
-body {
+/* ==============================
+   GENERAL STYLES
+   ============================== */
+   body {
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa; /* Un ligero color de fondo para todo el cuerpo del sitio */
 }
@@ -13,13 +10,25 @@ body {
     max-width: 800px; /* Hace que el contenedor no sea demasiado ancho para lectura */
 }
 
-/* Encabezados */
+/* ==============================
+   NAVBAR STYLES
+   ============================== */
+.navbar-brand img {
+    height: 50px;
+    width: auto;
+}
+
+/* ==============================
+   HEADINGS
+   ============================== */
 h1, h2, h3, h4, h5 {
     margin-top: 1.5rem;
     margin-bottom: 1rem;
 }
 
-/* Tarjetas de las entradas */
+/* ==============================
+   CARDS
+   ============================== */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1); /* Una sutil sombra para las tarjetas */
     transition: 0.3s;
@@ -37,7 +46,9 @@ h1, h2, h3, h4, h5 {
     color: #6c757d; /* Un color gris más ligero para el texto de la tarjeta */
 }
 
-/* Botones */
+/* ==============================
+   BUTTONS
+   ============================== */
 .btn-primary {
     background-color: #007bff; /* Puedes ajustar este color si quieres un tono diferente de azul para los botones */
     border: none;
@@ -48,6 +59,9 @@ h1, h2, h3, h4, h5 {
     border: none;
 }
 
+/* ==============================
+   FOOTER
+   ============================== */
 footer {
     background-color: #343a40; /* Un fondo oscuro para el pie de página */
     color: hsl(0, 93%, 33%); /* Texto blanco para el pie de página */
@@ -56,12 +70,40 @@ footer {
     text-align: center;
 }
 
-.post-container {
+/* ==============================
+   POSTS
+   ============================== */
+   .post-container {
     display: flex;
     align-items: start; /* Alinea los elementos al inicio verticalmente */
     gap: 30px; /* Espacio entre la imagen y el contenido */
 }
 
+.post-content {
+    flex-grow: 1; /* Permite que el contenido crezca para ocupar el espacio restante */
+}
+
+.titulo-comentario {
+    text-decoration: none;
+    color: #333;
+}
+
+.titulo-comentario:hover {
+    text-decoration: underline;
+}
+
+.enlace-autor {
+    color: green;
+    text-decoration: none;
+}
+
+.enlace-autor:hover {
+    text-decoration: underline;
+}
+
+/* ==============================
+   PROFILES
+   ============================== */
 .profile-image-container {
     flex-shrink: 0; /* Evita que la imagen se reduzca */
 }
@@ -70,8 +112,4 @@ footer {
     width: 80px; /* Ancho de la imagen de perfil */
     height: 80px; /* Altura de la imagen de perfil */
     border-radius: 0%; /* Hace que la imagen sea redonda */
-}
-
-.post-content {
-    flex-grow: 1; /* Permite que el contenido crezca para ocupar el espacio restante */
 }
