--- a/app/templates/post_detail.html
+++ b/app/templates/post_detail.html
@@ -5,21 +5,6 @@
     <h2>{{ post.title }}</h2>
     <p>{{ post.content }}</p>
 
-    <!-- Formulario para agregar comentario -->
-    {% if current_user.is_authenticated %}
-    <div class="my-4">
-        <h5>Agregar Comentario</h5>
-        <form action="{{ url_for('post_detail', post_id=post.id) }}" method="post">
-            <div class="form-group">
-                <textarea name="comment_text" class="form-control" placeholder="Escribe tu comentario aquí..." rows="4"></textarea>
-            </div>
-            <div class="form-group mt-2">
-                <button type="submit" class="btn btn-primary">Comentar</button>
-            </div>
-        </form>
-    </div>
-    {% endif %}
-
     <!-- Listado de comentarios -->
     <div class="my-4">
         <h5>Comentarios:</h5>
@@ -41,5 +26,20 @@
         </div>
         {% endfor %}
     </div>
+        <!-- Formulario para agregar comentario -->
+        {% if current_user.is_authenticated %}
+        <div class="my-4">
+            <h5>Agregar Comentario</h5>
+            <form action="{{ url_for('post_detail', post_id=post.id) }}" method="post">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.comment_text(class="form-control", placeholder="Escribe tu comentario aquí...", rows="4") }}
+                </div>
+                <div class="form-group mt-2">
+                    {{ form.submit(class="btn btn-primary") }}
+                </div>
+            </form>
+        </div>
+        {% endif %}
 </div>
 {% endblock %}
