--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -7,15 +7,15 @@
                 {% if post.author.avatar_filename %}
                     <img src="{{ url_for('static', filename='images/profile_images/' + post.author.avatar_filename) }}" alt="Avatar de {{ post.author.username }}" class="profile-image">
                 {% else %}
-                    <img src="{{ url_for('static', filename='images/profile_images/default.jpg') }}" alt="Avatar predeterminado" class="profile-image">
+                    <img src="{{ url_for('static', filename='images/default_images/default_avatar.png') }}" alt="Avatar predeterminado" class="profile-image">
                 {% endif %}
             </div>
 
             <!-- Contenido del post -->
             <div class="post-content">
-                <h2><a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a></h2>
+                <h2><a href="{{ url_for('post_detail', post_id=post.id) }}" class="titulo-comentario">{{ post.title }}</a></h2>
                 <p>{{ post.content }}</p>
-                <p>Escrito por: <a href="{{ url_for('user_profile', username=post.author.username) }}">{{ post.author.username }}</a></p>
+                <p>Escrito por: <a href="{{ url_for('user_profile', username=post.author.username) }}" class="enlace-autor">{{ post.author.username }}</a></p>
                 {% if current_user.is_authenticated and post.author.id == current_user.id %}
                     <a href="{{ url_for('edit_post', post_id=post.id) }}">Editar</a>
                     <form method="post" action="{{ url_for('delete_post', post_id=post.id) }}">
