--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
-<body>
+<body class="font-sans bg-gray-100">
 <!-- Navbar -->
 {% include 'includes/_navbar.html' %}
 
 <!-- Flash Messages -->
-<div class="container mt-4">
+<div class="mx-auto px-4 max-w-xl mt-4">
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
-                <div class="alert alert-info">
+                <div class="bg-blue-200 text-blue-800 p-4 rounded">
                     {{ message }}
                 </div>
             {% endfor %}
@@ -28,17 +28,13 @@
 </div>
 
 <!-- Main Content -->
-<div class="container">
+<div class="mx-auto px-4 max-w-xl">
     {% block content %}{% endblock %}
-
-
 </div>
+
 <!-- Footer -->
 {% include 'includes/_footer.html' %}
 
-<!-- Bootstrap JS -->
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
 </html>
