--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,47 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='images/logo/batskull.jpg') }}"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">Acerca del blog</a>
-        </li>
-        {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('create_post') }}">Crear Post</a>
-        </li>
-        {% endif %}
-        <li class="nav-item">
-          <a class="nav-link" href="/contact">Contacto</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('all_posts') }}">Posts</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Perfil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Iniciar sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/register">Registrarse</a>
-        </li>
-        {% endif %}
-      </ul>
-    </div>
+<nav class="bg-stone-200 p-4 shadow-md">
+  <div class="container">
+      <div class="flex justify-between items-center">
+          <a class="nav-logo" href="/"><img class="h-12" src="{{ url_for('static', filename='images/logo/batskull.jpg') }}"></a>
+
+          <div class="hidden lg:flex space-x-4">
+              <a class="text-gray-700 hover:text-gray-900" href="/">Inicio</a>
+              <a class="text-gray-700 hover:text-gray-900" href="/about">Acerca del blog</a>
+              {% if current_user.is_authenticated %}
+              <a class="text-gray-700 hover:text-gray-900" href="{{ url_for('create_post') }}">Crear Post</a>
+              {% endif %}
+              <a class="text-gray-700 hover:text-gray-900" href="/contact">Contacto</a>
+              <a class="text-gray-700 hover:text-gray-900" href="{{ url_for('all_posts') }}">Posts</a>
+          </div>
+          <div class="hidden lg:flex space-x-4 ml-auto">
+              {% if current_user.is_authenticated %}
+              <a class="text-gray-700 hover:text-gray-900" href="/profile">Perfil</a>
+              <a class="text-gray-700 hover:text-gray-900" href="{{ url_for('logout') }}">Cerrar Sesión</a>
+              {% else %}
+              <a class="text-gray-700 hover:text-gray-900" href="/login">Iniciar sesión</a>
+              <a class="text-gray-700 hover:text-gray-900" href="/register">Registrarse</a>
+              {% endif %}
+          </div>
+          <!-- Mobile menu button -->
+          <button class="lg:hidden flex items-center p-3">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+          </button>
+      </div>
+      <!-- Mobile Menu -->
+      <div class="lg:hidden mt-4 space-y-4">
+          <a class="block text-gray-700 hover:text-gray-900" href="/">Inicio</a>
+          <a class="block text-gray-700 hover:text-gray-900" href="/about">Acerca del blog</a>
+          {% if current_user.is_authenticated %}
+          <a class="block text-gray-700 hover:text-gray-900" href="{{ url_for('create_post') }}">Crear Post</a>
+          {% endif %}
+          <a class="block text-gray-700 hover:text-gray-900" href="/contact">Contacto</a>
+          <a class="block text-gray-700 hover:text-gray-900" href="{{ url_for('all_posts') }}">Posts</a>
+          {% if current_user.is_authenticated %}
+          <a class="block text-gray-700 hover:text-gray-900" href="/profile">Perfil</a>
+          <a class="block text-gray-700 hover:text-gray-900" href="{{ url_for('logout') }}">Cerrar Sesión</a>
+          {% else %}
+          <a class="block text-gray-700 hover:text-gray-900" href="/login">Iniciar sesión</a>
+          <a class="block text-gray-700 hover:text-gray-900" href="/register">Registrarse</a>
+          {% endif %}
+      </div>
   </div>
 </nav>
