--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -15,7 +15,7 @@
             <div class="post-content flex-grow">
                 <h2 class="mb-2"><a href="{{ url_for('post_detail', post_id=post.id) }}" class="titulo-comentario">{{ post.title }}</a></h2>
                 <p class="mb-2">{{ post.content }}</p>
-                <p class="mb-2">Escrito por: <a href="{{ url_for('user_profile', username=post.author.username) }}" class="enlace-autor">{{ post.author.username }}</a></p>
+                <p class="mb-2">{{ post.comments_count }} comentarios. Escrito por: <a href="{{ url_for('user_profile', username=post.author.username) }}" class="enlace-autor">{{ post.author.username }}</a></p>
                 {% if current_user.is_authenticated and post.author.id == current_user.id %}
                     <a href="{{ url_for('edit_post', post_id=post.id) }}" class="mr-2">Editar</a>
                     <form method="post" action="{{ url_for('delete_post', post_id=post.id) }}" class="inline">
