--- a/app/static/css/tailwind.css
+++ b/app/static/css/tailwind.css
@@ -227,12 +227,10 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
-  /* 1 */
+  -webkit-appearance: button; /* Para navegadores basados en WebKit */
+  appearance: button; /* Propiedad estándar */
   background-color: transparent;
-  /* 2 */
   background-image: none;
-  /* 2 */
 }
 
 /*
@@ -274,11 +272,11 @@ Correct the cursor style of increment and decrement buttons in Safari.
 */
 
 [type='search'] {
-  -webkit-appearance: textfield;
-  /* 1 */
+  -webkit-appearance: textfield; /* Propiedad específica del proveedor */
+  appearance: textfield; /* Propiedad estándar */
   outline-offset: -2px;
-  /* 2 */
 }
+
 
 /*
 Remove the inner padding in Chrome and Safari on macOS.
@@ -413,10 +411,8 @@ iframe,
 embed,
 object {
   display: block;
-  /* 1 */
-  vertical-align: middle;
-  /* 2 */
 }
+
 
 /*
 Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
