--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -3,8 +3,37 @@
 @import 'tailwindcss/utilities';
 
 /* ==============================
-   GENERAL STYLES
-   ============================== */
+   ESTILOS GENERALES 
+   ==============================
+
+────────────────────██████──────────
+──────────────────██▓▓▓▓▓▓██────────
+────────────────██▓▓▓▓▒▒▒▒██────────
+────────────────██▓▓▒▒▒▒▒▒██────────
+──────────────██▓▓▓▓▒▒▒▒██──────────
+──────────────██▓▓▒▒▒▒▒▒██──────────
+────────────██▓▓▓▓▒▒▒▒▒▒██──────────
+────────────████▒▒████▒▒██──────────
+────────────██▓▓▒▒▒▒▒▒▒▒██──────────
+──────────██────▒▒────▒▒██──────────
+──────────████──▒▒██──▒▒██──────────
+──────────██────▒▒────▒▒██──────────
+──────────██▒▒▒▒▒▒▒▒▒▒▒▒██──────────
+──────────████████████▒▒▒▒██────────
+────────██▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██──────
+──────██▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒██────
+────██▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒▒▒██──
+──██▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒▒▒██
+██▓▓▒▒▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒▒▒██
+██▓▓▒▒▓▓▒▒▒▒▒▒▓▓▓▓▒▒▒▒▒▒▒▒▒▒▓▓▓▓▒▒██
+██▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓██
+──████▐▌▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐▌▐▌████──
+────██▐▌▐▌▌▌▌▌▌▌▌▌▐▌▐▌▐▌▐▌▌▌▐▌██────
+────██▌▌▐▌▐▌▌▌▐▌▌▌▌▌▐▌▌▌▌▌▌▌▌▌██────
+──────██▌▌▐▌▐▌▐▌▐▌▐▌▐▌▐▌▌▌▌▌██──────
+──────██▐▌▐▌▐▌████████▐▌▌▌▌▌██──────
+────────██▒▒██────────██▒▒██────────
+────────██████────────██████──────── */
 
 body {
     font-family: 'Arial', sans-serif;
@@ -20,7 +49,7 @@ body {
 }
 
 /* ==============================
-   NAVBAR STYLES
+   NAVBAR 
    ============================== */
 
 .nav-logo {
