--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-gray-800 text-red-500 p-4 mt-8 text-center">
     <div class="container text-center">
-      <p class="mb-2">© 2023 Miniblog. Todos los derechos reservadosSS.</p>
+      <p class="mb-2">© 2023 Miniblog. Todos los derechos reservados.</p>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="/terms">Términos de servicio</a></li>
         <li class="list-inline-item"><a href="/privacy">Política de privacidad</a></li>
