--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="bg-stone-200 p-4 shadow-md">
+<nav class="bg-slate-400 p-4 shadow-md">
   <div class="container">
       <div class="flex justify-between items-center">
           <a class="nav-logo" href="/"><img class="h-12" src="{{ url_for('static', filename='images/logo/batskull.jpg') }}"></a>
