--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -2,8 +2,8 @@
   <div class="container text-center">
     <p class="mb-2">© 2023 Miniblog. Todos los derechos reservados.</p>
     <ul class="flex items-center justify-center space-x-4">
-      <li><a href="/terms">Términos de servicio</a></li>
-      <li><a href="/privacy">Política de privacidad</a></li>
+      <li><a href="/terms">Términos de servicio.</a></li>
+      <li><a href="/privacy">Política de privacidad.</a></li>
     </ul>
   </div>
 </footer>
