--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,7 @@
 <!-- Footer -->
 {% include 'includes/_footer.html' %}
 
+<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
 </body>
 
 </html>
