--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container">
     <h2>Iniciar sesión en Miniblog</h2>
-    <form action="{{ url_for('login') }}" method="post">
-        <label for="username">Nombre de usuario:</label>
-        <input type="text" name="username" required>
+    <form id="login-form">
+        <label for="username">Nombre de tu usuario:</label>
+        <input type="text" id="username" name="username" required>
         <br><br>
         <label for="password">Contraseña:</label>
-        <input type="password" name="password" required>
+        <input type="password" id="password" name="password" required>
         <br><br>
         <button type="submit">Iniciar Sesión</button>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
